--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 <body>
 <!--顶部logo-->
 <header>
-    <a href="http://gulimall.com/"><img src="/static/login/JD_img/logo.jpg"/></a>
+    <a href="http://localhost:8084/product"><img src="/static/login/JD_img/logo.jpg"/></a>
     <p>欢迎登录</p>
     <div class="top-1">
         <img src="/static/login/JD_img/4de5019d2404d347897dee637895d02b_06.png"/><span>登录页面,调查问卷</span>
@@ -98,7 +98,7 @@
 
             <h5 class="rig">
                 <img src="/static/login/JD_img/4de5019d2404d347897dee637895d02b_25.png"/>
-                <span><a href="http://auth.gulimall.com/reg.html">立即注册</a></span>
+                <span><a href="http://localhost:8150/reg.html">立即注册</a></span>
             </h5>
         </div>
     </div>
